--- a/src/components/footer/css/PageFooter.css
+++ b/src/components/footer/css/PageFooter.css
@@ -1,37 +1,26 @@
+#footer{
+  margin-top: 2%;
+  width: 100%;
+}
+
 .page-footer {
-    background-color: #333;
-  }
-  
-  .container {
-    max-width: 1200px;
-  }
-  
-  .row {
-    margin-bottom: 40px;
-  }
-  
-  .col {
-    padding-left: 15px;
-    padding-right: 15px;
-  }
-  
-  h5 {
-    font-size: 16px;
-  }
-  
-  ul {
-    list-style-type: none;
-    padding-left: 0;
-  }
-  
-  li {
-    line-height: 1.5em;
-  }
-  
-  .footer-copyright {
-    background-color: #444;
-  }
-  
-  span {
-    color: #fff;
-  }
+  margin-top: 4%;
+  background-image: linear-gradient(to right, #24a314, #aa780c, #18680e);
+  color: white;
+  padding: 5px 0;
+}
+
+.container {
+  width: 80%;
+  margin: auto;
+}
+
+.row {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.col-md-4 {
+  width: 30%;
+}
